Resolved routing issue and modified create driver availability handle